[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["Artyom Malyshev <malyshev@corp.sputnik.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "3.5.3"
flower = "0.9.5"
celery = "4.4.2"
amqp = "2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
